Do some nullable things.